--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,14 @@ server.servlet.encoding.force=true
 # devTools
 #자동 재시작 기능을 활성화하거나 비활성화합니다. 기본값은 true입니다.
 spring.devtools.livereload.enabled=true 
-#라이브 리로드 기능을 활성화하거나 비활성화합니다. 기본값은 true입니다.
+#ë¼ì´ë¸ ë¦¬ë¡ë ê¸°ë¥ì íì±ííê±°ë ë¹íì±íí©ëë¤. ê¸°ë³¸ê°ì trueìëë¤.
 spring.devtools.restart.enabled=true
 
+# datasource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/guestbook_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.username=guestbook
+spring.datasource.password=guestbook
 
+# mybatis
+mybatis.config-location=classpath:mybatis/configuration.xml
