--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,12 @@ spring.application.name=guestbook4
 
 #server
 server.port=8888
-server.servlet.context-path=/guestbook4
+server.servlet.context-path=/
+
+
+# WAR 배포 시 애플리케이션 타입 명시 (외부 Tomcat 충돌 방지)
+spring.main.web-application-type=servlet
+
 
 #view resolve
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -18,14 +23,18 @@ server.servlet.encoding.force=true
 # devTools
 #자동 재시작 기능을 활성화하거나 비활성화합니다. 기본값은 true입니다.
 spring.devtools.livereload.enabled=true 
-#ë¼ì´ë¸ ë¦¬ë¡ë ê¸°ë¥ì íì±ííê±°ë ë¹íì±íí©ëë¤. ê¸°ë³¸ê°ì trueìëë¤.
+#라이브 리로드 기능을 활성화하거나 비활성화합니다. 기본값은 true입니다.
 spring.devtools.restart.enabled=true
+
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/guestbook_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+# spring.datasource.url=jdbc:mysql://localhost:3306/guestbook_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://mysql.cp8mwygyg66x.ap-northeast-2.rds.amazonaws.com:3306/guestbook_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+
 spring.datasource.username=guestbook
 spring.datasource.password=guestbook
+
 
 # mybatis
 mybatis.config-location=classpath:mybatis/configuration.xml
